--- a/style.css
+++ b/style.css
@@ -13,16 +13,16 @@ a:hover {
 a:active {
 	color:yellow}
 table, th, td{
-//	border: 2px solide black;
-//}
-//table, th, td{
-//	background-color: turquoise;
-//}
-//th{
- //	font-size: 28px;
-//	font-family:Comic;
-//}
-//td{
-//	font-size: 22px;
-//	font-family: Arial;
-//}
+	border: 2px solide black;
+}
+table, th, td{
+	background-color: turquoise;
+}
+th{
+	font-size: 28px;
+	font-family:Comic;
+}
+td{
+	font-size: 22px;
+	font-family: Arial;
+}
