--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ a:hover {
 }
 a:active {
 	color:yellow}
-table, th, td{
-	border: 2px solide black;
-}
-table, th, td{
+table, th, tr, td {
+   	padding: 1px;
+      	border: 2px solid black;
 	background-color: turquoise;
-}
+    
+      }
 th{
 	font-size: 28px;
 	font-family:Comic;
