--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 a:link{
 	color:blue;
 	text-decoration:underline;
+	display: block;
+   	margin-left: auto;
+    	margin-right: auto
 }
 a:visited {
 	color:green;
@@ -25,4 +28,7 @@ th{
 td{
 	font-size: 22px;
 	font-family: Arial;
+}
+div {
+  text-align: center;
 }
